objects/Property_Due_Diligence_Reports__c.object
<CustomObject>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>House_Canary_Order_Id__c</fullName>
        <externalId>true</externalId>
        <label>ZZZHouse Canary Order Id</label>
        <length>25</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>House_Canary_Order_Validation_Results__c</fullName>
        <label>ZZZHouse Canary Order Validation Results</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>House_Canary_Status__c</fullName>
        <label>ZZZHouse Canary Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>New</fullName>
                </value>
                <value>
                    <fullName>ClientReview</fullName>
                </value>
                <value>
                    <fullName>Accepted</fullName>
                </value>
                <value>
                    <fullName>Cancelled</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Mercury_Order_Id__c</fullName>
        <label>ZZZMercury Order Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Opportunity__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Opportunity</label>
        <referenceTo>Opportunity</referenceTo>
        <relationshipLabel>Properties Due Diligence Reports</relationshipLabel>
        <relationshipName>Properties_Due_Diligence_Reports1</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Type__c</fullName>
        <label>ZZZOrder Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>inspectAndEvaluate</fullName>
                </value>
                <value>
                    <fullName>devFakeInspectAndFakeEvaluate</fullName>
                </value>
                <value>
                    <fullName>devFakeInspectAndEvaluate</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>PDD_Expiration__c</fullName>
        <description>Property Report’s Expiration Date (365 Days following Date of Inspection)</description>
        <formula>Effective_Date__c + 365</formula>
        <inlineHelpText>Property Report’s Expiration Date (365 Days following Date of Inspection)</inlineHelpText>
        <label>Property Report Expiration</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Property_Legal_Description__c</fullName>
        <label>Property Legal Description</label>
        <length>130000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Property_Parcel_Number__c</fullName>
        <label>Property Parcel Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spruce_Order_Id__c</fullName>
        <externalId>true</externalId>
        <label>Spruce Order Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Spruce_Title_Report_Downloaded__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Spruce Title Report Downloaded</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ordered</fullName>
                </value>
                <value>
                    <fullName>Received</fullName>
                </value>
                <value>
                    <fullName>Reviewed</fullName>
                </value>
                <value>
                    <fullName>new</fullName>
                    <default>true</default>
                    <label>new</label>
                </value>
                <value>
                    <fullName>initial_docs_available</fullName>
                    <label>Initial Docs Available</label>
                </value>
                <value>
                    <fullName>title_report_available</fullName>
                    <label>Title Report Available</label>
                </value>
                <value>
                    <fullName>closing_scheduled</fullName>
                    <label>Closing Scheduled</label>
                </value>
                <value>
                    <fullName>closing_confirmed</fullName>
                    <label>Closing Confirmed</label>
                </value>
                <value>
                    <fullName>closing_docs_submitted</fullName>
                    <label>Closing Docs Submitted</label>
                </value>
                <value>
                    <fullName>closing_occurred</fullName>
                    <label>Closing Occurred</label>
                </value>
                <value>
                    <fullName>funded</fullName>
                    <label>Funded</label>
                </value>
                <value>
                    <fullName>recorded</fullName>
                    <label>Recorded</label>
                </value>
                <value>
                    <fullName>policy_issued</fullName>
                    <label>Policy Issued</label>
                </value>
                <value>
                    <fullName>Required</fullName>
                    <isActive>false</isActive>
                    <label>Required</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Home Inspection</fullName>
                </value>
                <value>
                    <fullName>Title/Property Report</fullName>
                </value>
                <value>
                    <fullName>Combo Appraisal Inspection</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Spruce Refinance Transaction Title Order</fullName>
                </value>
                <value>
                    <fullName>Appraisal</fullName>
                    <isActive>false</isActive>
                    <label>Appraisal</label>
                </value>
                <value>
                    <fullName>Inspection</fullName>
                    <isActive>false</isActive>
                    <label>Inspection</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>VantagePoint_Order_Id__c</fullName>
        <externalId>true</externalId>
        <label>VantagePoint Order Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Property Due Diligence Reports</label>
    <listViews>
        <fullName>Property_Reports_All</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>VantagePoint_Order_Id__c</columns>
        <columns>Spruce_Order_Id__c</columns>
        <columns>Status__c</columns>
        <columns>Type__c</columns>
        <columns>OWNER.FIRST_NAME</columns>
        <filterScope>Everything</filterScope>
        <label>Property Reports - All</label>
    </listViews>
    <listViews>
        <fullName>Spruce_Reports</fullName>
        <columns>NAME</columns>
        <columns>CREATED_DATE</columns>
        <columns>Status__c</columns>
        <columns>Effective_Date__c</columns>
        <columns>Property_Legal_Description__c</columns>
        <columns>Property_Parcel_Number__c</columns>
        <columns>PDD_Expiration__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Spruce_Order_Id__c</columns>
        <columns>Spruce_Title_Report_Downloaded__c</columns>
        <columns>Opportunity__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Spruce Refinance Transaction Title Order</value>
        </filters>
        <label>Spruce Reports</label>
    </listViews>
    <listViews>
        <fullName>VPT_Reports</fullName>
        <columns>NAME</columns>
        <columns>Status__c</columns>
        <columns>CREATED_DATE</columns>
        <columns>PDD_Expiration__c</columns>
        <columns>OWNER.ALIAS</columns>
        <columns>Opportunity__c</columns>
        <columns>VantagePoint_Order_Id__c</columns>
        <columns>LAST_UPDATE</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Type__c</field>
            <operation>equals</operation>
            <value>Title/Property Report</value>
        </filters>
        <label>VPT Reports</label>
    </listViews>
    <nameField>
        <label>Property Due Diligence Report Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Properties Due Diligence Reports</pluralLabel>
    <recordTypes>
        <fullName>Home_Inspection</fullName>
        <active>true</active>
        <label>Home Inspection</label>
    </recordTypes>
    <recordTypes>
        <fullName>House_Canary_Appraisal</fullName>
        <active>true</active>
        <description>House Canary Appraisal Order</description>
        <label>House Canary Appraisal</label>
    </recordTypes>
    <recordTypes>
        <fullName>Spruce_Order</fullName>
        <active>true</active>
        <description>Spruce Order Title Order</description>
        <label>Spruce Order</label>
    </recordTypes>
    <recordTypes>
        <fullName>VantagePoint_Order</fullName>
        <active>true</active>
        <description>Vantage Point Title Order</description>
        <label>VantagePoint Order</label>
    </recordTypes>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>